--- a/test/fixtures/profiles.yml
+++ b/test/fixtures/profiles.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  admin: false
+  is_admin: false
 
 two:
-  admin: false
+  is_admin: false
